pkg/lang/syntax/testdata/ub/valid/selector-body/library.ub
greeting: resource {
  outputs: {
    message: {
      value: input.message
    }
  }
}

lookup: data-source {
  outputs: {
    id: {
      value: input.id
    }
  }
}
