pkg/lang/syntax/testdata/ub/invalid/selector-body/library-node-dotted-key.ub
greeting: resource {
  resources: {
    std.file.this: {}
  }
}
